--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {   
-    "name": "marlon-be/marlon-sips",
+    "name": "deruwe/atos-sips",
     "autoload": {
         "psr-0": { "Sips": "lib/" }
     }
