Add branch alias...

--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,12 @@
     "name": "deruwe/atos-sips",
     "autoload": {
         "psr-0": { "Sips": "lib/" }
+    },
+    {
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.1.x-dev"
+        }
     }
+}
 }
